--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   PythonVersion: 3.8
+  DOCKER_IMAGE_NAME: kube2py
 
 jobs:
   python-ci:
@@ -54,3 +55,28 @@ jobs:
         with:
           name: python-artifacts
           path: .
+
+  build-image:
+    name: Build and push image
+    needs: ['python-ci']
+    if: github.ref_name == 'main'
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: python-artifacts
+        path: .
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        context: ./src
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
