--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ env:
 
 jobs:
   python-ci:
+    name: Python CI
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -51,13 +52,14 @@ jobs:
           flake8 . --exit-zero --max-complexity=6
 
       - name: Upload python artifacts
+        if: github.ref_name == 'main'
         uses: actions/upload-artifact@v4
         with:
           name: python-artifacts
           path: .
 
-  build-image:
-    name: Build and push image
+  docker-ci:
+    name: Docker CI
     needs: ['python-ci']
     if: github.ref_name == 'main'
     runs-on: ubuntu-latest
